--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,74 @@
     <title>Fundamentos da Web</title>
 </head>
 <body>
-    <p>
-    <h1>Em construção...</h1>
-    </p>
+    <section id="convocados-brasil">
+        <h1>Lista de convocados para a Seleção Brasileira 2020</h1>
+        <ul>
+            <li>Goleiros
+                <ol>
+                    <li>Ederson</li>
+                    <li>Weverton</li>
+                    <li>Ivan</li>
+                </ol>
+            </li>
+            <li>Zagueiros
+                <ol>
+                    <li>Thiago Silva</li>
+                    <li>Marquinhos</li>
+                    <li>Eder Militão</li>
+                    <li>Felipe</li>
+                </ol>
+            </li>
+            <li>Laterais
+                <ol>
+                    <li>Dani Alves</li>
+                    <li>Danilo</li>
+                    <li>Renan Lodi</li>
+                    <li>Alex Sandro</li>
+                </ol>
+            </li>
+            <li>Meio Campistas
+                <ol>
+                    <li>Arthur</li>
+                    <li>Casemiro</li>
+                    <li>Fabinho</li>
+                    <li>Everton Ribeiro</li>
+                    <li>Bruno Guimarães</li>
+                </ol>
+            </li>
+            <li>Atacantes
+                <ol>
+                    <li>Philippe Coutinho</li>
+                    <li>Gabriel Jesus</li>
+                    <li>Richarlison</li>
+                    <li>Roberto Firmino</li>
+                    <li>Gabigol</li>
+                    <li>Neymar</li>
+                    <li>Everton</li>
+                    <li>Bruno Henrique</li>
+                </ol>
+            </li>    
+        </ul>
+        <hr>
+    </section>
+
+    <section id="the-weeknd">
+        <figure>
+            <img src="./img/the_weeknd.jpeg" alt="The Weeknd" width="320" height="320">
+        </figure>
+        <h2>The Weeknd</h2>
+        <p><b>Nome Completo: </b>Abel Makkonen Tesfaye</p>
+        <p><b>Idade: </b>31 anos (16 de fevereiro de 1990)</p>
+        <p><b>Nacionalidade: </b><span itemprop="nacionality">Canadiano</span></p>
+        <p><b>Ocupação: </b>Cantor, compositor, ator, produtor musical</p>
+        <p><b>Curiosidade: </b>É de ascendência etíope; seus pais, Makkonen e Samra, emigraram da Etiópia na década de 1980.</p>
+        <p><b>Algumas Músicas</b><p>
+        <ul>
+            <li>Wicked Games</li>
+            <li>Save Your Tears</li>
+            <li>The Morning</li>
+            <li>Starboy</li>
+        </ul>
+    </section>
 </body>
-</html>
+</html> 
