--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <h2>The Weeknd</h2>
         <p><b>Nome Completo: </b>Abel Makkonen Tesfaye</p>
         <p><b>Idade: </b>31 anos (16 de fevereiro de 1990)</p>
+        <p><b>Altura: </b>1,73 m</p>
         <p><b>Nacionalidade: </b><span itemprop="nacionality">Canadiano</span></p>
         <p><b>Ocupação: </b>Cantor, compositor, ator, produtor musical</p>
         <p><b>Curiosidade: </b>É de ascendência etíope; seus pais, Makkonen e Samra, emigraram da Etiópia na década de 1980.</p>
