--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p><b>Nacionalidade: </b><span itemprop="nacionality">Canadiano</span></p>
         <p><b>Ocupação: </b>Cantor, compositor, ator, produtor musical</p>
         <p><b>Curiosidade: </b>É de ascendência etíope; seus pais, Makkonen e Samra, emigraram da Etiópia na década de 1980.</p>
-        <p><b>Algumas Músicas</b><p>
+        <p>Algumas Músicas<p>
         <ul>
             <li>Wicked Games</li>
             <li>Save Your Tears</li>
