--- a/fund-web/lab-diagramacao/index.html
+++ b/fund-web/lab-diagramacao/index.html
@@ -12,7 +12,7 @@
         <nav>
             <section class="section-navegation">
                 <h3>CEFET-RJ</h3>
-                <hr>
+                <hr class="hr-1">
                 <ul class="ul-main">
                     <li><a href='#'>LOREM</a></li>
                     <li><a href='#'>IPSUM</a></li>
@@ -20,6 +20,7 @@
                     <li><a href='#'>TEMPUS</a></li>
                     <li><a href='#'>ADIPISCING</a></li>
                 </ul>
+                <img src="./img/lupa.png" alt="Lupa">
             </section>
         </nav>
     </header>
@@ -30,15 +31,16 @@
                     <figure class="logo">
                         <img src="./img/logo.jpg" alt="logo">
                 </figure>
-                <h1>CEFET-RJ FRIBURGO</h1>
+                <h2>CEFET-RJ FRIBURGO</h2>
                 <p>ANOTHER FINE RESPONSIVE SITE TEMPLATE BY HTML5 UP</p>
-                <hr>
                 </article>
+                <hr>
+                
                 <article class="main-left-top">
                     <figure>
                         <img class="background-image" src="./img/pic04.jpg" alt="Ferramentas">
                     </figure>
-                    <h3>VITAE SED CONDIMENTUM</h3>
+                    <h3><a href="#">VITAE SED CONDIMENTUM</a></h3>
                     <p>OCTUBER 20, 2015</p>
                     <figure>
                         <img class="avatar" src="./img/avatar.jpg" alt="Avatar">
@@ -48,7 +50,7 @@
                     <figure>
                         <img class="background-image" src="./img/pic05.jpg" alt="Carro">
                     </figure>
-                    <h3>RUTRUM NEQUE ACCUMSAN</h3>
+                    <h3><a href="#">RUTRUM NEQUE ACCUMSAN</a></h3>
                     <p>OCTUBER 19, 2015</p>
                     <figure>
                         <img class="avatar" src="./img/avatar.jpg" alt="Avatar">
@@ -58,7 +60,7 @@
                     <figure>
                         <img class="background-image" src="./img/pic06.jpg" alt="Urso">
                     </figure>
-                    <h3>ODIO CONGUE MATTIS</h3>
+                    <h3><a href="#">ODIO CONGUE MATTIS</a></h3>
                     <p>OCTUBER 18, 2015</p>
                     <figure>
                         <img class="avatar" src="./img/avatar.jpg" alt="Avatar">
@@ -68,7 +70,7 @@
                     <figure>
                         <img class="background-image" src="./img/pic07.jpg" alt="Paisagem">
                     </figure>
-                    <h3>ENIM NISL VEROEROS</h3>
+                    <h3><a href="#">ENIM NISL VEROEROS</a></h3>
                     <p>OCTUBER 17, 2015</p>
                     <figure>
                         <img class="avatar" src="./img/avatar.jpg" alt="Avatar">
@@ -76,41 +78,43 @@
                 </article>
                 <hr>
 
-                <article class="main-left-bottom">
-                    <figure>
-                        <img src="./img/pic08.jpg" alt="Montanhas">
-                    </figure>
-                    <h4>LOREM IPSUM FERMENTUM UT NISL VITAE</h4>
-                    <p>OCTUBER 20, 2015</p>
-                </article>
-                <article class="main-left-bottom">
-                    <figure>
-                        <img src="./img/pic09.jpg" alt="Céu">
-                    </figure>
-                    <h4>CONVALLIS MAXIMUS PLACERAT VIVAMUS PORTTITOR</h4>
-                    <p>OCTUBER 15, 2015</p>
-                </article>
-                <article>
-                    <figure>
-                        <img class="main-left-bottom" src="./img/pic10.jpg" alt="Ferramentas">
-                    </figure>
-                    <h4>EUISMOD AMET PLACERAT VIVAMUS PORTTITOR</h4>
-                    <p>OCTUBER 10, 2015</p>
-                </article>
-                <article class="main-left-bottom">
-                    <figure>
-                        <img src="./img/pic11.jpg" alt="Carro">
-                    </figure>
-                    <h4>MAGNA ENIM ACCUMSAN TORTOR CURSUS ULTRICIES</h4>
-                    <p>OCTUBER 8, 2015</p>
-                </article>
-                <article class="main-left-bottom">
-                    <figure>
-                        <img src="./img/pic12.jpg" alt="Urso">
-                    </figure>
-                    <h4>CONGUE ULLAM CORPER LOREM IPSUM DOLOR</h4>
-                    <p>OCTUBER 7, 2015</p>
-                </article>
+                <section class="main-left-bottom">
+                    <article class="main-left-bottom-article">
+                        <figure>
+                            <img src="./img/pic08.jpg" alt="Montanhas">
+                        </figure>
+                        <h4><a href="#">LOREM IPSUM FERMENTUM UT NISL VITAE</a></h4>
+                        <p>OCTUBER 20, 2015</p>
+                    </article>
+                    <article class="main-left-bottom-article">
+                        <figure>
+                            <img src="./img/pic09.jpg" alt="Céu">
+                        </figure>
+                        <h4><a href="#">CONVALLIS MAXIMUS PLACERAT VIVAMUS PORTTITOR</a></h4>
+                        <p>OCTUBER 15, 2015</p>
+                    </article>
+                    <article class="main-left-bottom-article">
+                        <figure>
+                            <img class="main-left-bottom" src="./img/pic10.jpg" alt="Ferramentas">
+                        </figure>
+                        <h4><a href="#">EUISMOD AMET PLACERAT VIVAMUS PORTTITOR</a></h4>
+                        <p>OCTUBER 10, 2015</p>
+                    </article>
+                    <article class="main-left-bottom-article">
+                        <figure>
+                            <img src="./img/pic11.jpg" alt="Carro">
+                        </figure>
+                        <h4><a href="#">MAGNA ENIM ACCUMSAN TORTOR CURSUS ULTRICIES</a></h4>
+                        <p>OCTUBER 8, 2015</p>
+                    </article>
+                    <article class="main-left-bottom-article">
+                        <figure>
+                            <img src="./img/pic12.jpg" alt="Urso">
+                        </figure>
+                        <h4><a href="#">CONGUE ULLAM CORPER LOREM IPSUM DOLOR</a></h4>
+                        <p>OCTUBER 7, 2015</p>
+                    </article>
+                </section>
                 <hr><hr>
 
                 <article class="about">
@@ -118,6 +122,7 @@
                     <p>Mauris neque quam, fermentum ut nisil vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod amet placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at phasellius sed ultricies.</p>
                     <a href="#">LEARN MORE</a>
                 </article>
+                <hr>
             </section>
 
             <section class="main-right">
@@ -190,6 +195,11 @@
                     </figure>
                     <a href="#">CONTINUE READING</a>
                 </article>
+                
+                <footer>
+                    <a href="#">PREVIOUS PAGE</a>
+                    <a href="#">NEXT PAGE</a>
+                </footer>  
             </section>
         </main>
     </div>
