--- a/fund-web/lab-diagramacao2/index.html
+++ b/fund-web/lab-diagramacao2/index.html
@@ -14,7 +14,7 @@
         <p>Design by duororem</p>
         <nav>
             <ul>
-                <li><a href="#">Homepage</a></li>
+                <li><a href="#"><span>Homepage</span></a></li>
                 <li><a href="#">Left sidebar</a></li>
                 <li><a href="#">Right sidebar</a></li>
                 <li><a href="#">No sidebar</a></li>
@@ -26,7 +26,7 @@
         <div class="main-top">
             <div class="main-top-left">
                 <h2>Welcome to lorem ipsum!</h2>
-                <p>Integer sit amet pede vel arcu aliquet pretium</p>
+                <p class="gray">Integer sit amet pede vel arcu aliquet pretium</p>
                 <figure>
                     <img src="./img/pic07.jpg" alt="Pôr do sol">
                 </figure>
@@ -105,35 +105,35 @@
     </main>
     <footer>
         <ul>
-            <li>Lastest posts
+            <li><span><strong>Lastest posts</strong></span>
                 <ol>
-                    <li>Pellentesque lectus gravida blandit</li>
-                    <li>Lorem ipsum consectectuer adipiscing</li>
-                    <li>Phasellus nibh pelientesque congus</li>
-                    <li>Cras vitae metus aliquam phanetra</li>
-                    <li>Mascenas vitae orci eleifend</li>
+                    <li><a href="#">Pellentesque lectus gravida blandit</a></li>
+                    <li><a href="#">Lorem ipsum consectectuer adipiscing</a></li>
+                    <li><a href="#">Phasellus nibh pelientesque congus</a></li>
+                    <li><a href="#">Cras vitae metus aliquam phanetra</a></li>
+                    <li><a href="#">Mascenas vitae orci eleifend</a></li>
                 </ol>
             </li>
         </ul>
         <ul>
-            <li>Ultrices fringilla
+            <li><span><strong>Ultrices fringilla</strong></span>
                 <ol>
-                    <li>Pellentesque lectus gravida blandit</li>
-                    <li>Lorem ipsum consectectuer adipiscing</li>
-                    <li>Phasellus nibh pelientesque congus</li>
-                    <li>Cras vitae metus aliquam phanetra</li>
-                    <li>Mascenas vitae orci eleifend</li>
+                    <li><a href="#">Pellentesque lectus gravida blandit</a></li>
+                    <li><a href="#">Lorem ipsum consectectuer adipiscing</a></li>
+                    <li><a href="#">Phasellus nibh pelientesque congus</a></li>
+                    <li><a href="#">Cras vitae metus aliquam phanetra</a></li>
+                    <li><a href="#">Mascenas vitae orci eleifend</a></li>
                 </ol>
             </li>
         </ul>
         <ul>
-            <li>Aenean elementum
+            <li><span><strong>Aenean elementum</strong></span>
                 <ol>
-                    <li>Pellentesque lectus gravida blandit</li>
-                    <li>Lorem ipsum consectectuer adipiscing</li>
-                    <li>Phasellus nibh pelientesque congus</li>
-                    <li>Cras vitae metus aliquam phanetra</li>
-                    <li>Mascenas vitae orci eleifend</li>
+                    <li><a href="#">Pellentesque lectus gravida blandit</a></li>
+                    <li><a href="#">Lorem ipsum consectectuer adipiscing</a></li>
+                    <li><a href="#">Phasellus nibh pelientesque congus</a></li>
+                    <li><a href="#">Cras vitae metus aliquam phanetra</a></li>
+                    <li><a href="#">Mascenas vitae orci eleifend</a></li>
                 </ol>
             </li>
         </ul>
