--- a/fund-web/lab-diagramacao2/index.html
+++ b/fund-web/lab-diagramacao2/index.html
@@ -13,7 +13,18 @@
         <h1>Lorem Ipsum</h1>
         <p>Design by duororem</p>
         <nav>
-            <ul>
+            <details id="nav-cel">
+                <summary>
+                    <i class="A"></i>
+                </summary>
+                <ul>
+                    <li><a href="#"><span>Homepage</span></a></li>
+                    <li><a href="#">Left sidebar</a></li>
+                    <li><a href="#">Right sidebar</a></li>
+                    <li><a href="#">No sidebar</a></li>
+                </ul>
+            </details>
+            <ul id="nav-desk">
                 <li><a href="#"><span>Homepage</span></a></li>
                 <li><a href="#">Left sidebar</a></li>
                 <li><a href="#">Right sidebar</a></li>
