--- a/fund-web/lab-javascript/index.html
+++ b/fund-web/lab-javascript/index.html
@@ -17,11 +17,11 @@
 <body>
     <h1>Laboratório de JavaScript</h1>
     <ul>
-        <li><a href="./questao1.html">Questão 1</a></li>
-        <li><a href="./questao2.html">Questão 2</a></li>
-        <li><a href="./questao3.html">Questão 3</a></li>
-        <li><a href="./questao4.html">Questão 4</a></li>
-        <li><a href="./questao5.html">Questão 5</a></li>
+        <li><a href="./questao1.html" target="_blank">Questão 1</a></li>
+        <li><a href="./questao2.html" target="_blank">Questão 2</a></li>
+        <li><a href="./questao3.html" target="_blank">Questão 3</a></li>
+        <li><a href="./questao4.html" target="_blank">Questão 4</a></li>
+        <li><a href="./questao5.html" target="_blank">Questão 5</a></li>
     </ul>
 </body>
 </html>
