--- a/fund-web/lab-estruturacao-css/index.html
+++ b/fund-web/lab-estruturacao-css/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <title>Exemplo Theory</title>
-    <script src="/js/script1.js"></script>
+    <script src="./js/script1.js"></script>
+    <script src="https://kit.fontawesome.com/6436ed7579.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
+            <ul id="nav-desktop">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Generic</a></li>
                 <li><a href="#">Elements</a></li>
@@ -53,22 +54,22 @@
             <h2>Ipsum Feugiat</h2>
             <p>Semper suscipit posuere apede</p>
             <div>
-                <img src="/images/pic03.jpg" alt="Person 1">
+                <img src="./images/pic03.jpg" alt="Person 1">
                 <h3>Magna</h3>
                 <p>Cipdum dolor</p>
             </div>
             <div>
-                <img src="/images/pic04.jpg" alt="Person 2">
+                <img src="./images/pic04.jpg" alt="Person 2">
                 <h3>Magna</h3>
                 <p>Cipdum dolor</p>
             </div>
             <div>
-                <img src="/images/pic05.jpg" alt="Person 3">
+                <img src="./images/pic05.jpg" alt="Person 3">
                 <h3>Magna</h3>
                 <p>Cipdum dolor</p>
             </div>
             <div>
-                <img src="/images/pic06.jpg" alt="Person 4">
+                <img src="./images/pic06.jpg" alt="Person 4">
                 <h3>Magna</h3>
                 <p>Cipdum dolor</p>
             </div>
@@ -77,7 +78,7 @@
             <h2>Nunc Dignissim</h2>
             <p>Aliquam erat volutpat nam dui </p>
             <div>
-                <img src="/images/pic01.jpg" alt="Landscape 01">
+                <img src="./images/pic01.jpg" alt="Landscape 01">
                 <h3>Praesent placerat magna</h3>
                 <p>
                     Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.
@@ -85,7 +86,7 @@
                 <a href="#">More</a>
             </div>
             <div>
-                <img src="/images/pic02.jpg" alt="Landscape 02">
+                <img src="./images/pic02.jpg" alt="Landscape 02">
                 <h3>Praesent placerat magna</h3>
                 <p>
                     Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor lorem ipsum.
@@ -96,34 +97,34 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div id="copy">
             &copy;Untitled. Design: TEMPLATED. Images: Unsplash. 
         </div>
         <div>
             <ul>
                 <li>
                     <a href="#">
-                        <i class="fa-facebook"></i>
+                        <i class="fab fa-facebook-f"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa-twitter"></i>
+                        <i class="fab fa-twitter"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa-linkedin"></i>
+                        <i class="fab fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa-pinterest-p"></i>
+                        <i class="fab fa-pinterest"></i>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa-vimeo"></i>
+                        <i class="fab fa-vimeo"></i>
                     </a>
                 </li>
             </ul>
