lab-estruturacao-css

--- a/fund-web/lab-estruturacao-css/index.html
+++ b/fund-web/lab-estruturacao-css/index.html
@@ -12,6 +12,17 @@
 <body>
     <header>
         <nav>
+            <details id="nav-mobile">
+                <summary>
+                    <i class="fas fa-align-justify"></i>
+                </summary>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Generic</a></li>
+                    <li><a href="#">Elements</a></li>
+                </ul>
+            </details>
+
             <ul id="nav-desktop">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Generic</a></li>
