--- a/fund-web/lab-strings/index.html
+++ b/fund-web/lab-strings/index.html
@@ -23,8 +23,8 @@
 <body>
     <h1>Laboratório de Strings e Datas</h1>
     <ul>
-        <li><a href="#">Questão 1</a></li>
-        <li><a href="#">Questão 2</a></li>
+        <li><a href="./questao1.html">Questão 1</a></li>
+        <li><a href="./questao2.html">Questão 2</a></li>
         <li><a href="#">Questão 3</a></li>
         <li><a href="#">Questão 4</a></li>
         <li><a href="#">Questão 5</a></li>
