--- a/fund-web/lab-strings/questao2.html
+++ b/fund-web/lab-strings/questao2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão 1</title>
+    <title>Questão 2</title>
     <style>
         *{
             font-family: Arial, Helvetica, sans-serif;
@@ -13,15 +13,18 @@
         p{
             font-size: 1em;
         }
+
+        #vgMarcadas{
+            font-size: 1.2em;
+        }
     </style>
 </head>
 <body>
-    <h1>Questão 1</h1>
-    <p> Faça um programa que leia uma frase e escreva abaixo invertendo os caracteres - o primeiro se torna o 
-        último, o segundo o penúltimo e assim por diante.</p>
+    <h1>Questão 2</h1>
+    <p>Faça um programa que leia uma frase e escreva abaixo marcando as vogais em negrito.</p>
     <input type="text" id="frase" placeholder="Frase">
-    <button id="inverter">Inverter</button>
-    <p id="fraseInvertida"></p>
+    <button id="marcar">Marcar vogais</button>
+    <p id="vgMarcadas"></p>
 </body>
 </html>
-<script src="./js/questao1.js"></script>
+<script src="./js/questao2.js"></script>
