--- a/fund-web/lab-strings/index.html
+++ b/fund-web/lab-strings/index.html
@@ -25,14 +25,14 @@
     <ul>
         <li><a href="./questao1.html">Questão 1</a></li>
         <li><a href="./questao2.html">Questão 2</a></li>
-        <li><a href="#">Questão 3</a></li>
-        <li><a href="#">Questão 4</a></li>
-        <li><a href="#">Questão 5</a></li>
-        <li><a href="#">Questão 6</a></li>
-        <li><a href="#">Questão 7</a></li>
-        <li><a href="#">Questão 8</a></li>
-        <li><a href="#">Questão 9</a></li>
-        <li><a href="#">Questão 10</a></li>
+        <li><a href="./questao3.html">Questão 3</a></li>
+        <li><a href="./questao4.html">Questão 4</a></li>
+        <li><a href="./questao5.html">Questão 5</a></li>
+        <li><a href="./questao6.html">Questão 6</a></li>
+        <li><a href="./questao7.html">Questão 7</a></li>
+        <li><a href="./questao8.html">Questão 8</a></li>
+        <li><a href="./questao9.html">Questão 9</a></li>
+        <li><a href="./questao10.html">Questão 10</a></li>
     </ul>
 </body>
 </html>
