--- a/fund-web/lab-strings/index.html
+++ b/fund-web/lab-strings/index.html
@@ -23,16 +23,16 @@
 <body>
     <h1>Laboratório de Strings e Datas</h1>
     <ul>
-        <li><a href="./questao1.html">Questão 1</a></li>
-        <li><a href="./questao2.html">Questão 2</a></li>
-        <li><a href="./questao3.html">Questão 3</a></li>
-        <li><a href="./questao4.html">Questão 4</a></li>
-        <li><a href="./questao5.html">Questão 5</a></li>
-        <li><a href="./questao6.html">Questão 6</a></li>
-        <li><a href="./questao7.html">Questão 7</a></li>
-        <li><a href="./questao8.html">Questão 8</a></li>
-        <li><a href="./questao9.html">Questão 9</a></li>
-        <li><a href="./questao10.html">Questão 10</a></li>
+        <li><a href="./questao1.html" target="_blank">Questão 1</a></li>
+        <li><a href="./questao2.html" target="_blank">Questão 2</a></li>
+        <li><a href="./questao3.html" target="_blank">Questão 3</a></li>
+        <li><a href="./questao4.html" target="_blank">Questão 4</a></li>
+        <li><a href="./questao5.html" target="_blank">Questão 5</a></li>
+        <li><a href="./questao6.html" target="_blank">Questão 6</a></li>
+        <li><a href="./questao7.html" target="_blank">Questão 7</a></li>
+        <li><a href="./questao8.html" target="_blank">Questão 8</a></li>
+        <li><a href="./questao9.html" target="_blank">Questão 9</a></li>
+        <li><a href="./questao10.html" target="_blank">Questão 10</a></li>
     </ul>
 </body>
 </html>
