--- a/fund-web/lab-strings/questao4.html
+++ b/fund-web/lab-strings/questao4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Questão 3</title>
+    <title>Questão 4</title>
     <style>
         *{
             font-family: Arial, Helvetica, sans-serif;
@@ -32,14 +32,13 @@
     </style>
 </head>
 <body>
-    <h1>Questão 3</h1>
-    <p>Faça um programa que leia um texto e separe todas as palavras em um array, indicado para cada uma 
-        delas o número de vezes que aparece no texto. Imprima o array em uma tabela contendo a palavra e 
-        número de ocorrências.</p>
+    <h1>Questão 4</h1>
+    <p>Faça um programa que leia um texto e indique a palavra de maior ocorrência e quantas vezes ela 
+        apareceu no texto.</p>
     <textarea id="texto" placeholder="Texto"></textarea>
-    <button id="separar">Identificar ocorrências</button>
+    <button id="separar">Identificar maior ocorrência</button>
     <p id="textoDigitado"></p>
     <table id = "tabela"></table>
 </body>
 </html>
-<script src="./js/questao3.js"></script>
+<script src="./js/questao4.js"></script>
