catalogo de filmes

--- a/fund-web/catalogo_filmes/index.html
+++ b/fund-web/catalogo_filmes/index.html
@@ -5,24 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Catálogo de Filmes e Séries</title>
     <script src="./js/jquery.js"></script>
+    <script src="https://kit.fontawesome.com/6436ed7579.js" crossorigin="anonymous"></script>
     <script src="./js/filmes.js"></script>
+    <title>Catálogo de Filmes e Séries</title>
 </head>
 <body>
     <h1>Catálogo de Filmes e Séries</h1>
     <section class="catalogo-filmes">
-        <div class="filme">
-            <img src="" alt="aa">
-            <h3>lorem</h3>
-            <p>asasas</p>
-            <p>asasasa</p>
-            <p>aaaa</p>
-            <p>Titulos similares</p>
-            <img src="" alt="aa">
-            <img src="" alt="aa">
-            <img src="" alt="aa">
-        </div>
-    </main>
+ <!--    <div class="filme">
+            <div class="filme-header">
+                <img src="https://rafaelescalfoni.github.io/desenv_web/img/breakingBad.png" alt="Breaking Bad" class="filme-img">
+                <div class="header-info">
+                    <h3 class="filme-titulo">Breaking Bad</h3>
+                    <p class="filme-generos">Séries,Séries dos EUA,Séries Dramáticas,Dramas para TV sobre crimes</p>
+                    <b class="filme-elenco">Elenco:</b>
+                    <p class="filme-elenco">Bryan Cranston,Aaron Paul,Anna Gunn,Dean Norris</p>
+                </div>
+                <div class="header-classificacao">
+                    <p class="classificacao-idade">18</p>
+                    <div class="estrelas">
+                        <i class="fa fa-star" style="color: gray;"></i>
+                        <i class="fa fa-star" style="color: gray;"></i>
+                        <i class="fa fa-star" style="color: gray;"></i>
+                        <i class="fa fa-star" style="color: gray;"></i>
+                        <i class="fa fa-star" style="color: gray;"></i>
+                    </div>
+                </div>
+            </div>
+            <p class="filme-resumo">À beira da morte, um professor passa a fabricar metanfetamina pelo futuro da família, mudando o destino de todos.</p>
+            <b class="titulos">Titulos semelhantes</b>
+            <div class="titulos-similares">
+                <img src="https://rafaelescalfoni.github.io/desenv_web/img/betterCallSaul.jpg" alt="Better Call Saul" class="similares-img">
+                <img src="https://rafaelescalfoni.github.io/desenv_web/img/houseOfCards.png" alt="House of Cards" class="similares-img">
+                <img src="https://rafaelescalfoni.github.io/desenv_web/img/narcos.png" alt="Narcos" class="similares-img">
+            </div>
+            <p>avaliacoes</p>
+            <div class="comentarios">
+                <blockquote>aaa</blockquote>
+                <blockquote>aaa</blockquote>
+            </div>
+        </div> --> 
+    </section>
 </body>
 </html>
