--- a/fund-web/catalogo_filmes/index.html
+++ b/fund-web/catalogo_filmes/index.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Catálogo de Filmes e Séries</h1>
     <section class="catalogo-filmes">
- <!--    <div class="filme">
+<!--        <div class="filme">
             <div class="filme-header">
                 <img src="https://rafaelescalfoni.github.io/desenv_web/img/breakingBad.png" alt="Breaking Bad" class="filme-img">
                 <div class="header-info">
@@ -25,11 +25,11 @@
                 <div class="header-classificacao">
                     <p class="classificacao-idade">18</p>
                     <div class="estrelas">
-                        <i class="fa fa-star" style="color: gray;"></i>
-                        <i class="fa fa-star" style="color: gray;"></i>
-                        <i class="fa fa-star" style="color: gray;"></i>
-                        <i class="fa fa-star" style="color: gray;"></i>
-                        <i class="fa fa-star" style="color: gray;"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star" ></i>
+                        <i class="fa fa-star"></i>
                     </div>
                 </div>
             </div>
@@ -42,10 +42,14 @@
             </div>
             <p>avaliacoes</p>
             <div class="comentarios">
-                <blockquote>aaa</blockquote>
-                <blockquote>aaa</blockquote>
+                <blockquote>aaa aaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaa</blockquote>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
             </div>
-        </div> --> 
+        </div> -->
     </section>
 </body>
 </html>
